# huquq-ai

./: .env.example  .gitignore  INSTALL.md  MUSTAQIL_ISH.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  config.yaml  make.bat  pyproject.toml  requirements.txt  requirements.txt.old  run_huquqai.py  setup.py  test_huquqai.py
.claude/: settings.local.json
data/knowledge/: README.md  criminal_code.ttl
data/ontologies/: README.md  legal_ontology.owl
docs/: CONFIG_GUIDE.md  ONTOLOGY_MANAGER.md  README.md  REASONING_ENGINE.md  SPARQL_ENGINE.md
examples/: __init__.py  ontology_usage.py  reasoning_usage.py  sparql_usage.py
scripts/: __init__.py  verify_encoding.py
src/: __init__.py
src/api/: __init__.py  bot.py  main.py  routes.py
src/core/: __init__.py  base.py  config.py  ontology_manager.py  reasoning_engine.py  sparql_engine.py
src/models/: __init__.py  domain_model.py  legal_entities.py  ontology.py  query_model.py
src/services/: __init__.py  query_service.py  sparql_service.py
src/utils/: __init__.py  helpers.py  language.py  logger.py
tests/: __init__.py  test_ontology_manager.py  test_query_service.py  test_reasoning_engine.py  test_sparql_engine.py
